--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+
+  .stroke-text {
+    -webkit-text-stroke: 1px white;
+  }
+}
+
 :root {
   --color-bg: #050505;
   --color-text: #e1e1e1;
